--- a/packages/gg_ui/src/gg_ui/styles/shapes/maia/combobox.css
+++ b/packages/gg_ui/src/gg_ui/styles/shapes/maia/combobox.css
@@ -59,7 +59,7 @@
   }
 
   .cn-combobox-chip {
-    @apply bg-muted-foreground/10 text-foreground flex h-[calc(--spacing(5.5))] w-fit items-center justify-center gap-1 rounded-4xl px-2 text-xs font-medium whitespace-nowrap has-data-[slot=combobox-chip-remove]:pr-0;
+    @apply bg-muted-foreground/10 text-foreground flex h-[calc(--spacing(5.5))] w-fit items-center justify-center gap-1 rounded-4xl px-2 text-xs font-medium whitespace-nowrap has-data-[slot=combobox-chip-remove]:pr-0 focus:outline-hidden focus:ring-2 focus:ring-ring/50;
   }
 
   .cn-combobox-chip-remove {
